# python-project-lvl1

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
brain_games/: __init__.py  brain_even_game.py  cli.py  game_engine.py
brain_games/games/: __init__.py  brain_calc_game.py  brain_even_game.py  brain_gcd_game.py  brain_prime_game.py  brain_progression_game.py  calc.py  even.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
