[tool.poetry]
name = "hexlet-code"
version = "0.7.3"
description = "The Brain Games: Even, Calc, GCD, Progression, Prime"
authors = ["agmrv <agmrv@ya.ru>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Games/Entertainment :: Puzzle Games"
]
repository = "https://github.com/agmrv/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
isort = "<5"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

